--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@
 
 # name of the virtual env
 venv/**
+
+# Ignore files from Jetbrains IDE Pycharm
+.idea/.iws
+.idea/.workspace.xml
+.idea/tasks.xml
+
